fix: assign a z-index that will be higher than language menu.

--- a/assets/source/3.0/sass/navigation/_collapsible-search.scss
+++ b/assets/source/3.0/sass/navigation/_collapsible-search.scss
@@ -15,7 +15,7 @@
         display: flex;
         padding: calc(var(--base, 8px) * .5);
         overflow: hidden;
-        z-index: $level-2;
+        z-index: $level-7;
         opacity: 0;
   
         @media (max-width: 799px) {
